# multiprocessor-interconnect-coherence-model

./: .gitignore  README.md  graficas.py  mp_studio.py  output_pc_msi.txt  resultados.csv  test.trace
common/: CMakeLists.txt  trace_parser.hpp
include/common/: trace_parser.hpp
include/sim/: event_log.hpp  interconnect.hpp  l1_cache.hpp  log.hpp  monitor.hpp  pe_trace_player.hpp  shared_memory.hpp  top.hpp
sim/: CMakeLists.txt  interconnect.cpp  interconnect.hpp  l1_cache.cpp  l1_cache.hpp  monitor.hpp  pe_trace_player.cpp  pe_trace_player.hpp  shared_memory.hpp  top.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  trace_parser.cpp
src/sim/: CMakeLists.txt  event_log.cpp  interconnect.cpp  l1_cache.cpp  log.cpp  main.cpp  monitor.cpp  pe_trace_player.cpp  shared_memory.cpp  top.cpp  top.hpp
src/tools/: CMakeLists.txt  tracegen.cpp
src/traces/: add_sub_example.trace  contador.trace  contador.txt  contador_atomico.trace  contador_atomico.txt  contadores_privados.trace  contadores_privados.txt  migratory.trace  migratory_atomic.trace  migratory_atomic.txt  migratory_long.trace  pc_long.trace  producer_consumer.trace  producer_consumer_rmw.trace  producer_consumer_rmw.txt  resultados.csv  suma_acumulada.trace  suma_acumulada.txt  test.trace  test.txt  test_logging_formal.trace  test_logging_formal.txt
tools/: tracegen.cpp
traces/: migratory.trace  producer_consumer.trace
